blog-image-stretch-fix1

--- a/src/components/hero.module.css
+++ b/src/components/hero.module.css
@@ -10,7 +10,7 @@
     Ensure golden ratio for the hero size while limiting it to some extend to
     the viewport width
   */
-  width: 100%;
+  height: 100%;
   max-height: 400px;
 }
 
